--- a/PropertyViewings.Api/PropertyViewings.Api.csproj
+++ b/PropertyViewings.Api/PropertyViewings.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,10 @@
   <ItemGroup>
     <ProjectReference Include="..\PropertyViewings.Application\PropertyViewings.Application.csproj" />
     <ProjectReference Include="..\PropertyViewings.Infrastructure\PropertyViewings.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
